<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="move_activity2">Pindah Activity 2</string>
    <string name="move_with_data">Pindah Activity dengan Data</string>
    <string name="move_with_object">Pindah Activity dengan Object</string>
    <string name="dial_number">Dial a Number</string>
    <string name="move_with_result">Pindah Activity untuk Result</string>
    <string name="result_from_activity">Hasil dari Activity</string>
    <string name="choose_number">Pilih angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">Pilih</string>
    <string name="data_received">Data Diterima</string>
    <string name="object_received">Object Diterima</string>
    <string name="this_is_moveactivity">Ini MoveActivity</string>
    <string name="this_is_moveactivity2">Ini MoveActivity 2</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="intent_mengirim_data">Intent - Mengirim Data</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="view_website">View Website</string>
    <string name="mendapatkan_nilai_balik_dari_intent">Mendapatkan Nilai Balik dari Intent</string>
</resources>