<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/explicit_intent"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginVertical="8dp" />

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity" />

    <Button
        android:id="@+id/btn_move_activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_mengirim_data"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginVertical="6dp" />

    <Button
        android:id="@+id/btn_move_activity_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data" />

    <Button
        android:id="@+id/btn_move_activity_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_object" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginVertical="8dp" />

    <Button
        android:id="@+id/dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number" />

    <Button
        android:id="@+id/view_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_website" />

</LinearLayout>